Added nullchecks, default values, test tweaks